[package]
name = "marijuana-verification"
version = "0.1.0"
authors = ["Josh Terrill <joshterrill.dev@gmail.com>"]
edition = "2018"


[dependencies]
rocket = "0.4.2"
scraper = "0.10.1"
reqwest = "0.9.20"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]