[package]
name = "marijuana-verification"
version = "0.1.1"
authors = ["Josh Terrill <joshterrill.dev@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
scraper = "0.10.1"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive" ] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "handlebars_templates"]